fix header on mobile

--- a/htdocs/stylesheet.css
+++ b/htdocs/stylesheet.css
@@ -15,7 +15,7 @@ div#content {
 div#header {
     padding: 1rem;
     margin: 1rem;
-    display: flex;
+    display: contents;
     justify-content: center;
     background-color: rgb(153, 68, 40);
 }
